--- a/user registration.htm
+++ b/user registration.htm
@@ -1,30 +1,27 @@
 <Html>  
-    <head>   
-    <title>  
-    Registration Page  
-    </title>  
-    </head>  
-    <body bgcolor="Lightskyblue"> 
+    
+    <body bgcolor="grey"> 
        <h1>Registration Form</h1> 
     <br>  
     <br>  
     <form>  
       
     <label> Name </label>         
-    <input type="text" name="name" size="15"/> <br> <br>  
+    <input type="text" name="name" size="12"/> <br> <br>  <br>  
     <label> Email</label>     
-    <input type="text" name="email" size="15"/> <br> <br>  
+    <input type="text" name="email" size="12"/> <br> <br>  <br>  
     <label>   
         Mobile  
         </label>  
         <input type="text" name="country code"  value="+91" size="2"/>   
-        <input type="text" name="phone" size="10"/> <br> <br>
+        <input type="text" name="phone" size="10"/> <br> <br> <br>  
     <label> City </label>         
-    <input type="text" name="city" size="15"/> <br> <br>  
+    <input type="text" name="city" size="12"/> <br> <br>  <br>  
     <label>State</label>     
-    <input type="text" name="state" size="15"/> <br> <br>  
+    <input type="text" name="state" size="12"/> <br> <br>  <br>  
     <label>Country</label>         
-    <input type="text" name="country" size="15"/> <br> <br>   
+    <input type="text" name="country" size="12"/> <br> <br> <br>  
+
     <input type="button" value="Submit"/>  
     </form>  
     </body>  
